# QtSuperMacros

./: CMakeLists.txt
